--- a/client/src/components/carousel/Carousel.css
+++ b/client/src/components/carousel/Carousel.css
@@ -1,5 +1,6 @@
 .carousel {
   overflow: hidden;
+  width: 1200px;
   display: flex;
   padding: 15px;
   flex-direction: column;
@@ -20,7 +21,7 @@
   align-items: center;
   justify-content: center;
   height: 100%;
-  padding: 15px;
+  padding: 18px;
   background-color: #555;
   overflow-y: auto;
 }
@@ -28,7 +29,7 @@
 .carouselButtons {
   display: flex;
   justify-content: space-evenly;
-  margin-top: 20px;
+  margin-top: 5px;
 }
 
 .buttonArrow {
@@ -47,7 +48,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
+  margin-top: 5px;
 }
 
 .indicatorsButton {
