app: snake modified

--- a/client/src/components/snakeApp/Snake.css
+++ b/client/src/components/snakeApp/Snake.css
@@ -34,6 +34,10 @@
   background-color: green;
 }
 
+.cell-dark-green {
+  background-color: darkgreen;
+}
+
 .cell-red {
   background-color: rgb(226, 74, 74);
 }
