--- a/client/src/components/sideNav/SideNavStyle.css
+++ b/client/src/components/sideNav/SideNavStyle.css
@@ -3,7 +3,7 @@
   position: fixed;
   padding: 10px 0px 0px 0px;
   height: 100%;
-  flex: 0 0 235px;
+  flex: 0 0 250px;
   background-color: #2f4050;
   top: 0;
   left: 0px;
@@ -72,4 +72,8 @@
 
 .row #title {
   flex: 90%;
+}
+
+.subMenuList {
+  padding-left: 20px;
 }
