--- a/client/src/components/youtubeDownloader/youtubeDownloader.css
+++ b/client/src/components/youtubeDownloader/youtubeDownloader.css
@@ -56,3 +56,20 @@ button:hover {
 
   }
 }
+
+/* Spinnder */
+.spinner {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border: 4px solid rgba(255, 255, 255, 0.3);
+  border-radius: 50%;
+  border-top: 4px solid #000;
+  width: 40px;
+  height: 40px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
